--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -8,3 +8,5 @@ edition = "2021"
 [dependencies]
 clap = "3.1.18"
 mio = { version = "0.8.3", features = ["net", "os-poll"] }
+log = "0.4.17"
+env_logger = "0.9.0"
